<resources>
    <string name="app_name">Student Card</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="matriculation_number">Matriculation Number</string>
    <string name="birthdate">Birthdate</string>
    <string name="study_code">Study code</string>
    <string name="unset">Unset</string>
    <string name="edit_data">Edit data</string>
    <string name="updating_credentials_not_supported">Your device does not support updating credentials</string>
</resources>